[workspace]
[package]
name = "neutrino"
version = "0.3.1"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A GUI frontend in Rust based on web-view"
repository = "https://github.com/alexislozano/neutrino/"
readme = "README.md"
license = "MIT"
categories = ["gui"]
keywords = ["gui", "desktop", "web", "mvc"]

[dependencies]
base64 = "0.10.1"
html-minifier = "1.1.14"
json = "0.11.15"
rsass = "0.11.0"
strfmt = "0.1.6"
web-view = "0.4.1"

[build-dependencies]
base64 = "0.10.1"
rsass = "0.11.0"
